--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pyx",
+  "name": "pyxo-qrcode-api",
   "version": "1.0.0",
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
@@ -13,13 +13,17 @@
   },
   "dependencies": {
     "@middy/core": "^1.5.2",
-    "@middy/http-json-body-parser": "^1.5.2"
+    "@middy/http-json-body-parser": "^1.5.2",
+    "aws-sdk": "^2.999.0",
+    "qrcode": "^1.4.4"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/aws-sdk": "^2.7.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.14.25",
+    "@types/qrcode": "^1.4.1",
     "@types/supertest": "^2.0.11",
     "json-schema-to-ts": "^1.5.0",
     "mocha": "^9.1.2",
