--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
     "aws-sdk": "^2.999.0",
+    "clean-deep": "^3.4.0",
+    "nanoid": "^3.1.28",
     "qrcode": "^1.4.4"
   },
   "devDependencies": {
