--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clean-deep": "^3.4.0",
     "jimp": "^0.16.0",
     "nanoid": "^3.1.28",
-    "qrcode": "^1.4.4",
+    "qrcode": "^1.4.4"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
